--- a/a.html
+++ b/a.html
@@ -1,4 +1,14 @@
+<body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
 <script>
-	alert(2);
+	var app = new PIXI.Application({
+		width: 300, height: 300
+	});
+	
+	document.body.appendChild(app.view);
+
+	var g = app.stage.addChild(new PIXI.Graphics());
+	g.beginFill(0xFF0000, 1);
+	g.drawCircle(0, 0, 50);
 </script>
+</body>
