--- a/a.html
+++ b/a.html
@@ -8,7 +8,9 @@
 	document.body.appendChild(app.view);
 
 	var g = app.stage.addChild(new PIXI.Graphics());
-	g.beginFill(0xFF0000, 1);
-	g.drawCircle(0, 0, 50);
+	g.beginFill(0x0000FF, 1);
+	g.drawCircle(100,100,50);
+	g.beginFill(0xFFFFFF,1);
+	g.drawRect(10,10,50,50);
 </script>
 </body>
