--- a/a.html
+++ b/a.html
@@ -10,7 +10,13 @@
 	var g = app.stage.addChild(new PIXI.Graphics());
 	g.beginFill(0x0000FF, 1);
 	g.drawCircle(100,100,50);
+	g.endFill();
 	g.beginFill(0xFFFFFF,1);
 	g.drawRect(10,10,50,50);
+	g.endFill();
+	g.beginFill(0xffff00,1);
+	g.drawCircle(200,200,100);
+	g.endFill();
+
 </script>
 </body>
