--- a/testgame.html
+++ b/testgame.html
@@ -6,6 +6,8 @@
 //definition
 //--------------------------------
 
+//ゲームオブジェクト
+
 //キー
 class Key{
 constructor(){
@@ -16,36 +18,68 @@ this.Up = 0;
 }
 }
 var key = new Key();
-var moveValue = 1;
+var moveValue = 10;
 
-class Charactor{
-constructor(X,Y)
-{
-this.x = X;
-this.y = Y;
+class GameObject{
+
+constructor(){
+this.kind = 0;
+this.moveValue = 0;
+this.sprite = new PIXI.Sprite();
+this.sprite.width  = 50;
+this.sprite.height = 50;
+this.sprite.interactive = true;
+this.sprite.on('click',this.onClick);
+app.stage.addChild(this.sprite);
 }
+
+create(){
+this.kind = parseInt(Math.random() * 10 + 1);//1~10
+this.sprite.texture = texture[this.kind - 1];//0~9
+this.sprite.x = Math.random() * app.screen.width;
+this.sprite.y = 0 - this.sprite.height;
+this.moveValue = this.kind;
 }
-class Player extends Charactor{
+
+release(){
+this.kind = 0;
+this.sprite.texture = 0;
+this.moveValue = 0;
+}
+
+update(){
+this.sprite.y += this.moveValue;
+}
+
+onClick(){
+click += moveValue;
+this.release();
+}
 
 }
-class GameObject extends Charactor{
 
-}
+var click = 0;
+
 
 //時間
 var start = new Date();
 var date = new Date();
-var div = document.createElement("div");
-div.id = "div";
-var nowtime = document.createElement("p");
-nowtime.id = "id_time";
-nowtime.textContent = "nowtime";
-div.appendChild(nowtime);
+//var div = document.createElement("div");
+//div.id = "div";
+//var nowtime = document.createElement("p");
+//nowtime.id = "id_time";
+//nowtime.textContent = "nowtime";
+//div.appendChild(nowtime);
 
-var score = document.createElement("p");
-score.id = "id_score";
-score.textContent = "score";
-div.appendChild(score);
+//var score = document.createElement("p");
+//score.id = "id_score";
+//score.textContent = "score";
+//div.appendChild(score);
+
+//var text = document.createElement("p");
+//text.id = "id_text";
+//text.textContent = "text";
+//div.appendChild(text);
 
 //--------------------------------
 
@@ -57,9 +91,14 @@ div.appendChild(score);
 const app = new PIXI.Application();
 document.body.appendChild(app.view);
 var stage = app.stage.addChild(new PIXI.Graphics());
+var displayObject = new PIXI.DisplayObject;
 
-//関数ループ命令
-app.ticker.add(delta => this.gameloop(delta));
+var textTime = new PIXI.Text('TIME',{fontFamily : 'Arial', fontSize: 24, fill : 0xff1010, align : 'center'});
+textTime.x = app.screen.width/2;
+stage.addChild(textTime);
+var textScore = new PIXI.Text('SCORE',{fontFamily : 'Arial', fontSize: 24, fill : 0xff1010, align : 'center'});
+textScore.x = app.screen.width/4*3;
+stage.addChild(textScore);
 
 //イベントリスナー定義(キー入力、アップ・ダウン)
 window.addEventListener("keydown", (event) => {this.downHandler(event)}, false);
@@ -77,13 +116,32 @@ square.endFill();
 app.stage.addChild(square);
 
 //テクスチャ
-var texture = PIXI.Texture.fromImage("icon_160730_256.png");
-var sprite = new PIXI.Sprite(texture);
+var texture = [];
+texture[0] = PIXI.Texture.fromImage("numbers/0.png");
+texture[1] = PIXI.Texture.fromImage("numbers/1.png");
+texture[2] = PIXI.Texture.fromImage("numbers/2.png");
+texture[3] = PIXI.Texture.fromImage("numbers/3.png");
+texture[4] = PIXI.Texture.fromImage("numbers/4.png");
+texture[5] = PIXI.Texture.fromImage("numbers/5.png");
+texture[6] = PIXI.Texture.fromImage("numbers/6.png");
+texture[7] = PIXI.Texture.fromImage("numbers/7.png");
+texture[8] = PIXI.Texture.fromImage("numbers/8.png");
+texture[9] = PIXI.Texture.fromImage("numbers/9.png");
+var sprite = new PIXI.Sprite(texture[parseInt(Math.random() * 5)]);
 sprite.x = 100;
 sprite.y = 100;
 sprite.width  = 100;
 sprite.height = 100;
+sprite.interactive = true;//マウスイベント有効化
+sprite.on('click',clickObject);//クリックイベント
 app.stage.addChild(sprite);
+
+const classArray = [
+new GameObject(),
+new GameObject(),
+new GameObject(),
+new GameObject()
+];
 
 //--------------------------------
 
@@ -110,6 +168,11 @@ case 'ArrowUp': key.Up = 0; break;
 }
 }
 
+function clickObject(){
+click++;
+sprite.texture = texture[click%10];
+}
+
 //--------------------------------
 
 
@@ -127,8 +190,31 @@ if(key.Up){square.y -= moveValue;}
 sprite.x = square.x;
 sprite.y = square.y;
 
-nowtime.innerHTML = date.getTime() - start.getTime();
-score.innerHTML = Math.random()*100;
+
+
+//ローカルマウス座標取得
+//const position = app.renderer.plugins.interaction.mouse.global;
+//const position = app.renderer.plugins.interaction.mouse.getLocalPosition(displayObject);
+//nowtime.innerHTML = position.x;
+//score.innerHTML = position.y;
+//text.innerHTML = app.screen.height/2;
+textTime.text = date.getSeconds();
+textScore.text = click;
+
+for(var i = 0; i < classArray.length; i++){
+if(classArray[i].kind == 0){
+classArray[i].create();
+}
+else{
+classArray[i].update();
+}
+if(classArray[i].sprite.y > app.screen.height){
+classArray[i].release();
+}
+}
+
+
+
 }
 
 //--------------------------------
@@ -137,7 +223,10 @@ score.innerHTML = Math.random()*100;
 //others
 //--------------------------------
 
-document.body.appendChild(div);
+//関数ループ命令
+app.ticker.add(delta => this.gameloop(delta));
+
+//document.body.appendChild(div);
 
 //--------------------------------
 
