課題ゲーム制作

--- a/testgame.html
+++ b/testgame.html
@@ -1,175 +1,7 @@
 <body>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
 
-<script>
+<script src="game.js"></script>
 
-//definition
-//--------------------------------
-
-//キー
-class Key{
-	constructor(){
-		this.Right = 0;
-		this.Left = 0;
-		this.Down = 0;
-		this.Up = 0;
-	}
-}
-const key = new Key();
-
-class GameObject{
-
-	constructor(){
-		this.kind = 0;
-		this.moveValue = 0;
-		this.sprite = new PIXI.Sprite();
-		this.sprite.width  = 50;
-		this.sprite.height = 50;
-		this.sprite.interactive = true;
-		this.sprite.on('click',(function(obj){return function(){obj.onClick();}})(this));
-		app.stage.addChild(this.sprite);
-	}
-
-	create(){
-		this.kind = parseInt(Math.random() * 10 + 1);//1~10
-		this.sprite.texture = texture[this.kind - 1];//0~9
-		this.sprite.x = Math.random() * (app.screen.width - this.sprite.width);
-		this.sprite.y = 0 - this.sprite.height;
-		this.moveValue = this.kind;
-	}
-
-	release(){
-		this.kind = 0;
-		this.sprite.texture = 0;
-		//this.moveValue = 0;
-	}
-
-	update(){
-		this.sprite.y += this.moveValue;
-	}
-
-	onClick(){
-		score += this.kind;
-		this.release();
-	}
-
-}
-
-class Watch{
-
-	constructor(){
-		this.dateStart = new Date();
-		this.dateNow = new Date();
-	}
-
-	start(){
-		this.dateStart = new Date();
-	}
-
-	update(){
-		this.dateNow = new Date();
-	}
-
-	getPassedTime(){
-		return (this.dateNow.getTime() - this.dateStart.getTime());
-	}
-
-}
-const watch = new Watch();
-const InitialTime = 30;
-
-let score = 0;
-let timeOld = InitialTime;
-
-//--------------------------------
-
-
-//initialization
-//--------------------------------
-
-//アプリ初期化
-const app = new PIXI.Application();
-document.body.appendChild(app.view);
-let stage = app.stage.addChild(new PIXI.Graphics());
-
-let textTime = new PIXI.Text('TIME',{fontFamily : 'Arial', fontSize: 24, fill : 0xffffff, align : 'center'});
-textTime.x = app.screen.width/2;
-stage.addChild(textTime);
-let textScore = new PIXI.Text('SCORE',{fontFamily : 'Arial', fontSize: 24, fill : 0xffffff, align : 'center'});
-textScore.x = app.screen.width/4*3;
-stage.addChild(textScore);
-
-//テクスチャ
-let texture = [];
-texture[0] = PIXI.Texture.from("numbers/0.png");
-texture[1] = PIXI.Texture.from("numbers/1.png");
-texture[2] = PIXI.Texture.from("numbers/2.png");
-texture[3] = PIXI.Texture.from("numbers/3.png");
-texture[4] = PIXI.Texture.from("numbers/4.png");
-texture[5] = PIXI.Texture.from("numbers/5.png");
-texture[6] = PIXI.Texture.from("numbers/6.png");
-texture[7] = PIXI.Texture.from("numbers/7.png");
-texture[8] = PIXI.Texture.from("numbers/8.png");
-texture[9] = PIXI.Texture.from("numbers/9.png");
-
-const classArray = new Array();
-
-//計測開始
-watch.start();
-
-//関数ループ命令
-app.ticker.add(delta => this.gameloop(delta));
-
-//--------------------------------
-
-//function
-//--------------------------------
-
-function createObject(){
-	const obj = new GameObject();
-	obj.create();
-	classArray.push(obj);
-}
-
-function releaseObject(number){
-	let obj = classArray.splice(number,1);
-	obj[0].release();
-}
-
-//--------------------------------
-
-
-//mainloop
-//--------------------------------
-
-function gameloop(delta){
-
-	const passedtime = parseInt(InitialTime - watch.getPassedTime()/1000);
-
-	textTime.text = "TIME : " + passedtime;
-	textScore.text = "SCORE : " + score;
-
-	if(passedtime > 0){
-		if(passedtime != timeOld){
-			createObject();
-		}
-		timeOld = passedtime;
-		watch.update();
-		for(let i = 0; i < classArray.length; i++){
-			classArray[i].update();
-			if(classArray[i].sprite.y > app.screen.height){
-				releaseObject(i);
-			}
-		}
-	}
-	else{
-		for(let i = 0; i < classArray.length; i++){
-			classArray[i].release();
-		}
-	}
-}
-
-//--------------------------------
-
-</script>
 </body>
