--- a/testgame.html
+++ b/testgame.html
@@ -1,6 +1,7 @@
 <body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.2.1/pixi.min.js"></script>
+<script src="Pixim.min.js"></script>
 
 <script src="game.js"></script>
 
