課題クロスワード

--- a/crossword/testgame.html
+++ b/crossword/testgame.html
@@ -8,6 +8,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.2.1/pixi.min.js"></script>
 <script src="Pixim.min.js"></script>
 
+<script src="charset.js"></script>
+<script src="crossword_global.js"></script>
+
+<script src="crossword_list.js"></script>
+
 <script src="game.js"></script>
 
 </body>
